<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calc_home"
            android:icon="@drawable/baseline_calculate_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_history_black_24dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_live_bets"
            android:icon="@drawable/baseline_video_library_black_24dp"
            android:title="@string/menu_live_bets" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>