<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calc_home">

    <fragment
        android:id="@+id/nav_calc_home"
        android:name="com.csci448.bet_calc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.csci448.bet_calc.ui.gallery.GalleryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_live_bets"
        android:name="com.csci448.bet_calc.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_live_bets"
        tools:layout="@layout/fragment_slideshow" />
</navigation>